# decolog

./: .gitignore  README.md  pyproject.toml
src/decolog/: logger.py
tests/: test_logger.py
